Fix alignment

--- a/ui/appui-react/src/appui-react/layout/tool-settings/Docked.scss
+++ b/ui/appui-react/src/appui-react/layout/tool-settings/Docked.scss
@@ -5,6 +5,7 @@
 
 .uifw-toolSettings-docked {
   display: flex;
+  height: 100%;
   gap: var(--iui-size-m);
 }
 
